KUBER-35/kubernetes-application/23.3-kuber-2.3/configs/task-2/deployment-nginx.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-nginx
  namespace: application-configuration
spec:
  replicas: 1
  selector:
    matchLabels:
      app: deployment
  template:
    metadata:
      labels:
        app: deployment
    spec:
      containers:
      - name: nginx
        image: dockerhub.timeweb.cloud/nginx:1.26
        volumeMounts:
          - name: nginx-index-file
            mountPath: /usr/share/nginx/html/
      volumes:
        - name: nginx-index-file
          configMap:
            name: configmap-nginx
