KUBER-35/kubernetes-application/23.3-kuber-2.3/configs/task-2/service-nginx.yml
apiVersion: v1
kind: Service
metadata:
  name: service-nginx
  namespace: application-configuration
spec:
  type: NodePort
  ports:
    - name: nginx
      port: 80
      protocol: TCP
      targetPort: 80
      nodePort: 31000
  selector:
    app: deployment
